# offline_timestamp_align_mix

./: README.md
mix_ws/ros1_ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh
mix_ws/ros1_ws/devel/include/offline_timestamp_align/: FusedState.h
mix_ws/ros1_ws/devel/lib/offline_timestamp_align/: cam_w_norm_calculate  fusion_node  imu_w_norm_calculate  publish_node  split  time_offset_calculate_norm  time_offset_calculate_portion  timestamp_correct
mix_ws/ros1_ws/devel/lib/pkgconfig/: offline_timestamp_align.pc
mix_ws/ros1_ws/devel/lib/python3/dist-packages/offline_timestamp_align/msg/: _FusedState.py  __init__.py
mix_ws/ros1_ws/devel/share/common-lisp/ros/offline_timestamp_align/msg/: FusedState.lisp  _package.lisp  _package_FusedState.lisp  offline_timestamp_align-msg.asd
mix_ws/ros1_ws/devel/share/gennodejs/ros/offline_timestamp_align/msg/: FusedState.js  _index.js
mix_ws/ros1_ws/devel/share/offline_timestamp_align/cmake/: offline_timestamp_align-msg-paths.cmake  offline_timestamp_alignConfig.cmake
mix_ws/ros1_ws/devel/share/roseus/ros/offline_timestamp_align/: manifest.l
mix_ws/ros1_ws/devel/share/roseus/ros/offline_timestamp_align/msg/: FusedState.l
mix_ws/ros1_ws/src/offline_timestamp_align/: CMakeLists.txt  package.xml
mix_ws/ros1_ws/src/offline_timestamp_align/launch/: offline_timestamp_align.launch
mix_ws/ros1_ws/src/offline_timestamp_align/src/: cam_w_norm_calculate.cpp  fusion_node.cpp  imu_w_norm_calculate.cpp  publish_node.cpp  split.cpp  time_offset_calculate_norm.cpp  timestamp_correct.cpp
mix_ws/ros2_ws/install/: local_setup.sh  setup.sh
mix_ws/ros2_ws/install/offline_timestamp_align_colcon/include/offline_timestamp_align_colcon/msg/: fused_state.h  fused_state.hpp  rosidl_typesupport_introspection_c__visibility_control.h
mix_ws/ros2_ws/install/offline_timestamp_align_colcon/include/offline_timestamp_align_colcon/msg/detail/: fused_state__rosidl_typesupport_fastrtps_cpp.hpp  fused_state__struct.h  fused_state__struct.hpp  fused_state__type_support.cpp  fused_state__type_support.h
mix_ws/ros2_ws/install/offline_timestamp_align_colcon/lib/offline_timestamp_align_colcon/: cam_w_norm_calculate_colcon  fusion_node_colcon  imu_w_norm_calculate_colcon  publish_node_colcon
mix_ws/ros2_ws/install/offline_timestamp_align_colcon/share/offline_timestamp_align_colcon/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mix_ws/ros2_ws/install/offline_timestamp_align_colcon/share/offline_timestamp_align_colcon/cmake/: ament_cmake_export_targets-extras.cmake  offline_timestamp_align_colconConfig.cmake  offline_timestamp_align_colcon__rosidl_generator_cExport-noconfig.cmake  offline_timestamp_align_colcon__rosidl_generator_cppExport.cmake  offline_timestamp_align_colcon__rosidl_typesupport_cExport-noconfig.cmake  offline_timestamp_align_colcon__rosidl_typesupport_cExport.cmake  offline_timestamp_align_colcon__rosidl_typesupport_cppExport.cmake  offline_timestamp_align_colcon__rosidl_typesupport_introspection_cExport.cmake  offline_timestamp_align_colcon__rosidl_typesupport_introspection_cppExport-noconfig.cmake  offline_timestamp_align_colcon__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
mix_ws/ros2_ws/install/offline_timestamp_align_colcon/share/offline_timestamp_align_colcon/launch/: split.launch.py
mix_ws/ros2_ws/log/: latest_build
mix_ws/ros2_ws/src/offline_timestamp_align_colcon/: CMakeLists.txt
mix_ws/ros2_ws/src/offline_timestamp_align_colcon/launch/: offline_timestamp_align_colcon.launch.py
mix_ws/ros2_ws/src/offline_timestamp_align_colcon/msg/: FusedState.msg
mix_ws/ros2_ws/src/offline_timestamp_align_colcon/src/: cam_w_norm_calculate_colcon.cpp  fusion_node_colcon.cpp  imu_w_norm_calculate_colcon.cpp  publish_node_colcon.cpp  time_offset_calculate_portion_colcon.cpp  timestamp_correct_colcon.cpp
offline_timestamp_align_mix_ws/ros1_ws/src/offline_timestamp_align/: CMakeLists.txt  package.xml
offline_timestamp_align_mix_ws/ros1_ws/src/offline_timestamp_align/launch/: offline_timestamp_align.launch
offline_timestamp_align_mix_ws/ros1_ws/src/offline_timestamp_align/msg/: FusedState.msg
offline_timestamp_align_mix_ws/ros1_ws/src/offline_timestamp_align/src/: cam_w_norm_calculate.cpp  fusion_node.cpp  imu_w_norm_calculate.cpp  publish_node.cpp  split.cpp  time_offset_calculate_norm.cpp  time_offset_calculate_portion.cpp  timestamp_correct.cpp
offline_timestamp_align_mix_ws/ros2_ws/src/offline_timestamp_align_colcon/: CMakeLists.txt  package.xml
offline_timestamp_align_mix_ws/ros2_ws/src/offline_timestamp_align_colcon/launch/: both_1.launch.py  both_2.launch.py  offline_timestamp_align_colcon.launch.py  pub1_fus2.launch.py  pub2_fus1.launch.py  split.launch.py
offline_timestamp_align_mix_ws/ros2_ws/src/offline_timestamp_align_colcon/msg/: FusedState.msg
offline_timestamp_align_mix_ws/ros2_ws/src/offline_timestamp_align_colcon/src/: cam_w_norm_calculate_colcon.cpp  fusion_node_colcon.cpp  imu_w_norm_calculate_colcon.cpp  publish_node_colcon.cpp  time_offset_calculate_norm_colcon.cpp  time_offset_calculate_portion_colcon.cpp  timestamp_correct_colcon.cpp
