<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offline_timestamp_align_colcon</name>
  <version>0.0.0</version>
  <description>ROS2 Foxy port of offline timestamp alignment tool, for publishing cam/IMU data and fusing timestamp-aligned cam-IMU messages</description>
  <maintainer email="283275126@qq.com">niuzhijiu</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 消息接口组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 生成自定义消息依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 时间类型依赖 -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- 核心功能依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>  

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>  

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 导出接口 -->
  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_interface_packages>offline_timestamp_align_colcon</rosidl_interface_packages>
  </export>
</package>
